--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,14 @@
   padding: 0;
 }
 .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
-  background-color: white;
-  /* position: fixed; */
+  z-index: 20; /* higher than overlay */
 }
+
 /* Dark overlay behind modal */
 .modal-overlay {
   position: fixed;
